# eonix

./: Cargo.toml  README.md
.github/workflows/: rust.yml
eonix_derive/: Cargo.toml
eonix_derive/src/: component.rs  lib.rs  nosend.rs  resource.rs
examples/: simple.rs
src/: commands.rs  components.rs  entity.rs  filter.rs  lib.rs  macros.rs  query.rs  resources.rs  scene.rs  schedule.rs  system.rs  table.rs  thread_pool.rs  trait_impl.rs  world.rs
src/cells/: mod.rs  ref_cell.rs  split_world_cell.rs
src/schedule/: builder.rs  graph.rs  mod.rs
tests/: components.rs  mod.rs  resources.rs  systems.rs
tests/common/: mod.rs
